index and show controllers completed for horses

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,11 +10,12 @@
         <ul>
             <% for (let i = 0; i < horses.length; i ++) { %>
                 <li>
-                    <a href = "/horses/<%horses[i].id%>"><%=horses[i].name%></a>
+                    <a href = "/horses/<%=horses[i].id%>"><%=horses[i].name%></a>
                 </li>
                 <br/>
+            <% } %>
         </ul>
-        <% } %>
+       
 
         <a href="/horses/new">New</a>
 
