--- a/views/trainers/index.ejs
+++ b/views/trainers/index.ejs
@@ -5,9 +5,10 @@
         <title></title>
     </head>
     <body>
-        <h1>Trainer Index page</h1>
+        <h1>Welcome to Trainer Index Page</h1>
 
-        <!-- <a href="/horses/new">New</a> -->
+        <a href="/trainers/login">Login</a>
+        <a href="/trainers/signup">Signup</a>
 
     </body>
 </html>    
