--- a/views/trainers/login.ejs
+++ b/views/trainers/login.ejs
@@ -7,7 +7,11 @@
     <body>
         <h1>Trainer Login page</h1>
 
-        <!-- <a href="/horses/new">New</a> -->
+        <form action='/trainers/login' method="POST">
+            Username: <input type="text" name="username" /> <br> <br>
+            Password: <input type="text" name="password" /><br> <br>
+            <input type="submit" value="Login"/>
+        </form>
 
     </body>
 </html>    
