completed controllers for login and signup of trainers

--- a/views/trainers/signup.ejs
+++ b/views/trainers/signup.ejs
@@ -7,7 +7,13 @@
     <body>
         <h1>Trainer Signup page</h1>
 
-        <!-- <a href="/horses/new">New</a> -->
+        <form action='/trainers/signup' method="POST">
+            First Name: <input type="text" name="first" /><br> <br>
+            Last Name: <input type="text" name="last" /><br> <br>
+            Username: <input type="text" name="username" /> <br> <br>
+            Password: <input type="text" name="password" /><br> <br>
+            <input type="submit" value="SignUp"/>
+        </form>
 
     </body>
 </html>    
