--- a/views/trainers/profile.ejs
+++ b/views/trainers/profile.ejs
@@ -5,16 +5,11 @@
         <title></title>
     </head>
     <body>
-        <h1><%=trainer.name%> Profile page</h1>
+        <h1><%=`${trainer.first} ${trainer.last}'s`%> Profile page</h1>
 
         <!-- <a href="/horses/new">New</a>below added by bil -->
         <h3>Horses added by you:</h3>
-        <% for (let i=0; i< user.Horses.length; i++){ %>
-                <li>
-                   <a href="/horses/<%=trainers.horses[i].id%>"><%=user.horses[i].name%></a>
-                </li>
-                <br>
-        <% } %>
+
     
         <br><br>
     </body>
