--- a/views/trainers/index.ejs
+++ b/views/trainers/index.ejs
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title></title>
+        <link rel="stylesheet" href="/trainer.css" type="text/css">
     </head>
     <body>
         <h1>Welcome to Trainer Index Page</h1>
