--- a/views/trainers/profile.ejs
+++ b/views/trainers/profile.ejs
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title></title>
+        <link rel="stylesheet" href="/trainer.css" type="text/css">
     </head>
     <body>
         <h1><%=`${trainer.first} ${trainer.last}'s`%> Profile page</h1>
