--- a/views/show.ejs
+++ b/views/show.ejs
@@ -6,6 +6,25 @@
     </head>
     <body>
         <h1>Horses show page</h1>
-        The <%= horse.name %> is  <%= horse.color %>.
+        <h2><%= horse.name %></h2>
+        
+        <form action="/horses/<%=horse.id%>?_method=PUT" method="POST"> <!-- changed from 'index' to 'horse.id' -->
+            bname: <input type="text" name="bname" value=<%=horse.bname%> /><br> <br>
+            breed: <input type="text" name="breed" value=<%=horse.breed%> /><br> <br>
+            color: <input type="text" name="color" value=<%=horse.color%> /><br> <br>
+            age: <input type="text" name="age" value=<%=horse.age%> /><br> <br>
+            div: <input type="text" name="div" value=<%=horse.div%> /><br> <br>
+            gender: <input type="text" name="gender" value=<%=horse.gender%> /><br> <br>
+            height: <input type="text" name="height" value=<%=horse.height%> /><br> <br>
+            weight: <input type="text" name="weight" value=<%=horse.weight%> /><br> <br>
+            disp: <input type="text" name="disp" value=<%=horse.disp%> /><br> <br>
+            meds: <input type="text" name="meds" value=<%=horse.meds%> /> <br> <br>
+            lastworm: <input type="text" name="lastworm" value=<%=horse.lastworm%> /><br> <br>
+            lastshoe: <input type="text" name="lastshoe" value=<%=horse.lastshoe%> /><br> <br>
+            <br /><br />
+            <input type="submit" value="Edit Profile" />
+        </form>
+
+
     </body>
 </html>    
