--- a/views/trainers/profile.ejs
+++ b/views/trainers/profile.ejs
@@ -7,7 +7,7 @@
 
     </head>
     <body>
-        <h1 class='Names'><%=`${trainer.first} ${trainer.last}'s`%> Profile page</h1>
+        <h1><%=`${trainer.first} ${trainer.last}'s`%> Profile page</h1>
         
         <form action="/trainers/<%=trainer.id%>?_method=PUT" method="POST"> <!-- changed from 'index' to 'trainer.id' -->
              <img type= "image" src="<%=trainer.img%>">   
@@ -29,10 +29,15 @@
         </form>
 
 
+        <form action="/trainers/<%=trainer.id%>?_method=DELETE" method="POST">
+            <input type="submit" value="Delete Trainer" />
+        </form>
+
         <!-- <a href="/horses/new">New</a>below added by bil -->
         <h3>Horses added by you:</h3>
 
     
         <br><br>
+        <a href="/horses"> View all Horses</a>
     </body>
 </html>    
