--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Horse Index</title>
+        <link rel="stylesheet" href="/trainer.css" type="text/css">
     </head>
     <body>
         <h1>Horses Index page</h1>
