--- a/views/show.ejs
+++ b/views/show.ejs
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>View Horse</title>
+        <link rel="stylesheet" href="/trainer.css" type="text/css">
     </head>
     <body>
         <h1>Horses show page</h1>
@@ -25,6 +26,10 @@
             <input type="submit" value="Edit Profile" />
         </form>
 
+        <form action="/horses/<%=horse.id%>?_method=DELETE" method="POST">
+            <input type="submit" value="Delete Horse" />
+        </form><br/><br/>
+        <a href="/horses/">Return to Horse index</a>
 
     </body>
 </html>    
