--- a/public/trainer.css
+++ b/public/trainer.css
@@ -3,15 +3,15 @@ h1 {
     text-align: center;
     color: white;
     font-style: italic;
-    height: 60px;
+    height: 30px;
     font-size: 50px;
 }
 
 body {
     background-color: rgb(129, 19, 19);
     background-image: "https://i.imgur.com/csEhMwm.png";
-    margin: 50px;
-    padding: 50px;
+    margin: 20px;
+    padding: 40px;
     color: white;
  
     
@@ -62,6 +62,8 @@ a:hover {
 
 h2 {
     height: 30px;
+    margin-left: 20px;
+    color: white;    
     font-family:  Helvetica, sans-serif;       
 }
 
