--- a/views/trainers/profile.ejs
+++ b/views/trainers/profile.ejs
@@ -7,7 +7,8 @@
 
     </head>
     <body>
-        <h1><%=`${trainer.first} ${trainer.last}'s`%> Profile page</h1>
+        <h1>Trainer:    <%=`${trainer.first} ${trainer.last}'s`%></h1>
+        <h2>Horse Trainer Profile</h2>
         
         <form class="inputForm" action="/trainers/<%=trainer.id%>?_method=PUT" method="POST"> <!-- changed from 'index' to 'trainer.id' -->
              <img type= "image" src="<%=trainer.img%>">   
