--- a/views/trainers/profile.ejs
+++ b/views/trainers/profile.ejs
@@ -23,6 +23,7 @@
             age: <input class="box" type="text" name="age" value=<%=trainer.age%> /><br> <br>
             skill level: <input class="box" type="text" name="skillLevel" value=<%=trainer.skillLevel%> /><br> <br>
             Username: <input class="box" type="text" name="username" value=<%=trainer.username%> /> <br> <br>
+            image link: <input class="box" type="text"name="img" value=<%=trainer.img%> />
             
             <br /><br />
             <input type="submit" value="Edit Profile" />
@@ -31,7 +32,7 @@
 
         <action="/trainers/<%=trainer.id%>?_method=DELETE" method="POST">
             <input type="submit" value="Delete Trainer" /><br /><br />
-            Add your Pic: <input type="file" name="img" id="img" class="input_text"/>
+           
         </form>
 
         <!-- <a href="/horses/new">New</a>below added by bil -->
