--- a/public/trainer.css
+++ b/public/trainer.css
@@ -79,6 +79,7 @@ img {
     
     float: right;
     margin-left: 40px;
+    margin-bottom: 40px;
     padding: 10px;
     height: auto;
     width: 50%;
