--- a/views/show.ejs
+++ b/views/show.ejs
@@ -29,6 +29,14 @@
         <form action="/horses/<%=horse.id%>?_method=DELETE" method="POST">
             <input type="submit" value="Delete Horse" />
         </form><br/><br/>
+
+        <%= horse.name %> has the following trainers: <br />
+        <%= horse.trainerId %> <br />
+        <%= horse.Trainer.first %>
+        
+        <%= //horse.Trainer.trainerId %>
+
+
         <a href="/horses/">Return to Horse index</a>
 
     </body>
