--- a/views/show.ejs
+++ b/views/show.ejs
@@ -23,18 +23,33 @@
             lastworm: <input class = "box" type="text" name="lastworm" value=<%=horse.lastworm%> /><br> <br>
             lastshoe: <input class = "box" type="text" name="lastshoe" value=<%=horse.lastshoe%> /><br> <br>
             <br /><br />
+ 
+            Add Trainer: <select name = "trainer">
+                <% for (let i = 0; i < trainer.length; i++) { %> 
+                    <option value = "<%= trainer[i].id %>"><%= trainer[i].first %> <%= trainer[i].last %></option>
+                <% } %>
+            </select>
+            
             <input type="submit" value="Edit Profile" />
+
+
+
+
         </form><br /><br />
 
         <form action="/horses/<%=horse.id%>?_method=DELETE" method="POST">
             <input type="submit" value="Delete Horse" />
         </form><br/><br/>
 
+
         <%= horse.name %> has the following trainers: <br />
-        <%= horse.trainerId %> <br />
-        <%= horse.Trainer.first %>
+
+        <ul>
+            <% for (let i = 0; i < horse.Trainers.length; i ++) { %>
+                <li> <%= horse.Trainers[i].first %> <%= horse.Trainers[i].last %></li><br />
+            <% } %>
+        </ul>
         
-        <%= //horse.Trainer.trainerId %>
 
 
         <a href="/horses/">Return to Horse index</a>
