--- a/views/show.ejs
+++ b/views/show.ejs
@@ -8,7 +8,7 @@
     <body>
         <h1>Horses show page</h1>
         <h2><%= horse.name %></h2>
-        
+        <img type= "image" src="<%=horse.disp%>">
         <form class="inputForm" action="/horses/<%=horse.id%>?_method=PUT" method="POST"> <!-- changed from 'index' to 'horse.id' -->
             bname: <input class = "box" type="text" name="bname" value=<%=horse.bname%> /><br> <br>
             breed: <input class = "box" type="text" name="breed" value=<%=horse.breed%> /><br> <br>
