--- a/views/trainers/profile.ejs
+++ b/views/trainers/profile.ejs
@@ -7,9 +7,11 @@
 
     </head>
     <body>
-        <h1>Trainer:    <%=`${trainer.first} ${trainer.last}'s`%></h1>
-        <h2>Horse Trainer Profile</h2>
-        <img type= "image" src="<%=trainer.img%>">  
+        <h1>Horse Trainer Profile</h1>
+
+            <h2>Trainer:    <%=`${trainer.first} ${trainer.last}`%></h2>
+            <img type= "image" src="<%=trainer.img%>"> 
+
         <form class="inputForm" action="/trainers/<%=trainer.id%>?_method=PUT" method="POST"> <!-- changed from 'index' to 'trainer.id' -->
               
             
