--- a/views/trainers/profile.ejs
+++ b/views/trainers/profile.ejs
@@ -27,7 +27,13 @@
             Username: <input class="box" type="text" name="username" value=<%=trainer.username%> /> <br> <br>
             image link: <input class="box" type="text"name="img" value=<%=trainer.img%> />
         <br /><br />
-        Add Horse: <select name = "horse">
+        
+        Add or Remove Horse: <select name="addOrRemove">
+            <option value = "add">add</option>
+            <option value = "remove">remove</option>
+        </select><br />
+        
+        Horse name: <select name = "horse">
                 <% for (let i = 0; i < horse.length; i++) { %> 
                     <option value = "<%= horse[i].id %>"><%= horse[i].name %></option>
                 <% } %>
@@ -38,7 +44,6 @@
             <input type="submit" value="Delete Trainer" /><br /><br />
         </form>
 
-        <!-- <a href="/horses/new">New</a>below added by bil -->
         <h3>Horses added by you:</h3>
         <% for (let i = 0; i<trainer.Horses.length; i++) { %>
             <li>
