minor fixes and styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,18 +8,18 @@
     <body>
         <h1>Horses Index page</h1>
 
-        <ul>
-            <% for (let i = 0; i < horses.length; i ++) { %>
-                <li>
-                    <a href = "/horses/<%=horses[i].id%>"><%=horses[i].name%></a>
-                </li>
-                <br/>
-            <% } %>
-        </ul>
-       
-
-        <a href="/horses/new">New</a>
-        
+        <nav>
+            <ul>
+                <% for (let i = 0; i < horses.length; i ++) { %>
+                    <li>
+                        <a href = "/horses/<%=horses[i].id%>"><%=horses[i].name%></a>
+                    </li>
+                    <br/>
+                <% } %>
+            </ul>
+            
+            <a href="/horses/new">Create New Horse</a>
+        </nav>
 
     </body>
 </html>    
