--- a/public/trainer.css
+++ b/public/trainer.css
@@ -1,21 +1,28 @@
-
+/* body {
+    display: inline;
+} */
 h1 {
     text-align: center;
     color: white;
     font-style: italic;
     height: 30px;
     font-size: 50px;
-            
-    }
+}
 
-  h2 {
-
+h2 {
+    text-align: center;
+    margin: auto;
     height: 30px;
-    margin-left: 20px;
     color: white;    
-    font-family:  Helvetica, sans-serif;       
+    font-family:  Helvetica, sans-serif;
+    max-width:fit-content;       
 }  
 
+div {
+    float: right;
+    width: 50%;
+    margin: 10px;
+}
 
 body {
     background-color: rgb(129, 19, 19);
@@ -23,20 +30,19 @@ body {
     margin: 20px;
     padding: 40px;
     color: white;
- 
-    
 }
 
 img { 
-    margin-top: 10px;
-    margin-left: 40px;
+    margin: auto;
     margin-bottom: 60px;
     padding: 10px;
     height: auto;
-    width: 50%;
+    width: 90%;
     color: white;
     border: 10px solid lightgrey;
     font-family: Arial, Helvetica, sans-serif;
+    /* justify-self: center; */
+    display: block;
 }
 
 .inputForm {
@@ -48,55 +54,60 @@ img {
     border: 5px solid rgb(90, 4, 4);
     font-family: Arial, Helvetica, sans-serif;
     min-width: 400px;
-    
- }
+}
+
 .box {
     float: right;
-
-
 }
+
 input:hover {
     background-color:rgb(181, 224, 64)
 }
+
 input:focus {
     background-color: yellow;
-  }
-nav { text-align: center;
+}
+
+nav { 
+    text-align: center;
     border-bottom: 1px solid lightgrey;
-    height: 50px;
+    padding-bottom: 5px;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 a:link {
-    color: rgb(231, 220, 227);
+    color: gray;
     padding: 5px;
+    margin: 0;
+    padding: 0;
 }
+
 a:visited {
-    color: rgb(17, 0, 255);
+    color: gray;
     
 }
 a:hover {
     color: red;
-  }
+}
   
 .active:link {
     color: white;
-    
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
 
-
-main {    
+/* main {    
     padding-bottom: 30px;
     border-bottom: 1px solid lightgrey;
     height: 400px;
     border: 10px solid lightgrey;
-}
+} */
 
-
-
-
-@media only screen and
- (max-width: 800px) {
+@media only screen and (max-width: 1060px) {
     h1 {
         height: 20px;
         font-size: 20px;
@@ -105,6 +116,18 @@ main {
     h2 {
         height: 10px;
         font-size: 10px;
+        text-align: center;
+        margin: auto auto 5px auto;
+    }
+    
+    div {
+        float: none;
+        margin: auto;
+    }
 
+    .inputForm {
+        margin: auto;
+        float: none;
+        max-width: 400px;
     }
 }
