--- a/views/show.ejs
+++ b/views/show.ejs
@@ -7,8 +7,10 @@
     </head>
     <body>
         <h1>Horses show page</h1>
-        <h2><%= horse.name %></h2>
-        <img type= "image" src="<%=horse.disp%>">
+        <div>
+            <h2><%= horse.name %></h2>
+            <img type= "image" src="<%=horse.disp%>">
+        </div>
         <form class="inputForm" action="/horses/<%=horse.id%>?_method=PUT" method="POST"> <!-- changed from 'index' to 'horse.id' -->
             bname: <input class = "box" type="text" name="bname" value=<%=horse.bname%> /><br> <br>
             breed: <input class = "box" type="text" name="breed" value=<%=horse.breed%> /><br> <br>
@@ -38,9 +40,6 @@
 
             <input type="submit" value="Edit Profile" />
 
-
-
-
         </form><br /><br />
 
         <form action="/horses/<%=horse.id%>?_method=DELETE" method="POST">
@@ -55,8 +54,6 @@
                 <li> <%= horse.Trainers[i].first %> <%= horse.Trainers[i].last %></li><br />
             <% } %>
         </ul>
-        
-
 
         <a href="/horses/">Return to Horse index</a>
 
