--- a/views/trainers/index.ejs
+++ b/views/trainers/index.ejs
@@ -7,9 +7,9 @@
     </head>
     <body>
         <h1>Welcome to Trainer Index Page</h1>
-
-        <a href="/trainers/login">Login</a>
-        <a href="/trainers/signup">Signup</a>
-
+        <nav>
+            <a href="/trainers/login">Login</a>
+            <a href="/trainers/signup">Signup</a>
+        </nav>
     </body>
 </html>    
