--- a/views/trainers/profile.ejs
+++ b/views/trainers/profile.ejs
@@ -8,13 +8,13 @@
     </head>
     <body>
         <h1>Horse Trainer Profile</h1>
-
-            <h2>Trainer:    <%=`${trainer.first} ${trainer.last}`%></h2>
+        
+        <div>
+            <h2>Trainer: <%=`${trainer.first} ${trainer.last}`%></h2>
             <img type= "image" src="<%=trainer.img%>"> 
-
+        </div>
+        
         <form class="inputForm" action="/trainers/<%=trainer.id%>?_method=PUT" method="POST"> <!-- changed from 'index' to 'trainer.id' -->
-              
-            
             First Name: <input class="box" type="text" name="first" value=<%=trainer.first%> /><br> <br>
             Last Name: <input class="box" type="text" name="last" value=<%=trainer.last%> /><br> <br>
             address: <input class="box" type="text" name="address" value=<%=trainer.address%> /><br> <br>
@@ -26,22 +26,22 @@
             skill level: <input class="box" type="text" name="skillLevel" value=<%=trainer.skillLevel%> /><br> <br>
             Username: <input class="box" type="text" name="username" value=<%=trainer.username%> /> <br> <br>
             image link: <input class="box" type="text"name="img" value=<%=trainer.img%> />
-        <br /><br />
-        
-        Add or Remove Horse: <select name="addOrRemove">
-            <option value = "add">add</option>
-            <option value = "remove">remove</option>
-        </select><br />
-        
-        Horse name: <select name = "horse">
+            <br /><br />
+            Add or Remove Horse: <select name="addOrRemove">
+                <option value = "add">add</option>
+                <option value = "remove">remove</option>
+            </select>
+            <br />
+            Horse name: <select name = "horse">
                 <% for (let i = 0; i < horse.length; i++) { %> 
                     <option value = "<%= horse[i].id %>"><%= horse[i].name %></option>
                 <% } %>
             </select>
-        <br /><br />
-            <input type="submit" value="Edit Profile" />
-        <action="/trainers/<%=trainer.id%>?_method=DELETE" method="POST">
-            <input type="submit" value="Delete Trainer" /><br /><br />
+            <br /><br />
+            <input class="box" type="submit" value="Edit Profile" />
+        </form>
+        <form action="/trainers/<%=trainer.id%>?_method=DELETE" method="POST">
+            <input type="submit" clas = "box" value="Delete Trainer" /><br /><br />
         </form>
 
         <h3>Horses added by you:</h3>
